*******************************************************************************
Version 1.6.11
*******************************************************************************

2011-01-14 Chandra Penke <chandrapenke(at)mcntech.com>

	- Null termination of strndup() implementation on systems missing it.
	- Implementation of strnlen() on systems missing it.

2011-01-14 Chandra Penke <chandrapenke(at)mcntech.com>

	Fixes transfer encoding in the HTTP client API, which is currently
	broken. The break was due to a regression caused by another
	fix (tracker 3056713), which fixed an out of memory crash when
	downloading large files. The previous fix changed the
	http_ReadHttpGet() implementation so that data already read by the
	user was discarded. However, it only worked for transfers where
	the content length was specified. This fix extends the previous
	implementation to cover chunked transfer encoding.

2011-01-14 Chandra Penke <chandrapenke(at)mcntech.com>

	Minor change in membuffer.c to include "membuffer.h" without looking
	in the standard header path. This allows pupnp to build in xcode.

2010-12-18 Marcelo Roberto Jimenez <mroberto(at)users.sourceforge.net>

	SF Tracker: Patches
	Fedora mingw32 compilation - ID: 3138849
	Details:
	Hello. I trying compile libupnp-1.6.10 on the Fedora 14 MinGW
	Environment and get many errors. I create patch to fix it. With this
	patch i can get static library. This patch is very raw.

	Submitted: Ivan Romanov (ivanromanov) - 2010-12-16 23:29:19 UTC

*******************************************************************************
Version 1.6.10
*******************************************************************************

2010-11-23 Fabrice Fontaine <fabrice.fontaine(at)orange-ftgroup.com>

	Major bug fix in http_SendMessage.

	Currently, http_SendMessage was not able to write to write a buffer
	due to a bad use of file_buf instead of buf. This bug was introduced by
	the 0197-Doxygen-reformating-compiler-warnings patch.
